# KalbeCDT-genomic-paper-extractor

./: .gitignore  QA_eval_data_gen.ipynb  QA_eval_interpret.ipynb  QA_eval_main.ipynb  QA_eval_manual.ipynb  README.md  app.py  extractor.py  prompts.py  pyproject.toml  requirements.txt  upload.py
.github/workflows/: update_space.yml
kalbecdt_genomic_paper_extractor_proto/: app.py  extractor.py  upload.py
kalbecdt_genomic_paper_extractor_proto/pdf_processor/: tables_processor.py
pdf_processor/: pdf_processor.py
results/: eval_data_generated_15.01.25_10.11.json  eval_data_generated_15.01.25_12.00.json  eval_data_questions_context_answers.json  eval_data_questions_context_answers_17.01.2025_21.11.json  eval_data_questions_context_answers_17.01.2025_21.32.json  eval_result_data_NousResearch=Nous-Hermes-2-Mixtral-8x7B-DPO.16.01.25_12.18.csv  eval_result_data_NousResearch=Nous-Hermes-2-Mixtral-8x7B-DPO.16.01.25_12.18.json  eval_result_data_llama-3.1-8b-instant_17.01.2025_21.11.json  eval_result_data_llama-3.1-8b-instant_17.01.2025_21.32.json  eval_result_summary_NousResearch=Nous-Hermes-2-Mixtral-8x7B-DPO.16.01.25_12.18.json
