[tool.poetry]
name = "KalbeCDT-genomic-paper-extractor-proto"
version = "0.1.0"
description = ""
authors = ["Samwoof <abrisam.rm@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.5,<3.13"
langchain-chroma = ">=0.1.2"
langchain = "^0.3.13"
langgraph = "^0.2.60"
langchain-huggingface = "^0.1.2"
gradio = "^5.9.1"
torchvision = "^0.20.1"
img2table = "1.4.0"
pdf2image = "^1.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
