[tool.poetry]
name = "KalbeCDT-genomic-paper-extractor-proto"
version = "0.1.0"
description = ""
authors = ["Samwoof <abrisam.rm@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.5,<3.13"
langchain-chroma = ">=0.1.2"
langchain = "^0.3.13"
langgraph = "^0.2.60"
langchain-huggingface = "^0.1.2"
gradio = "^5.9.1"
torchvision = "0.20.1"
img2table = "1.4.0"
langchain-community = "0.3.13"
doctr = "^1.9.0"
python-doctr = "0.10.0"
opencv-contrib-python-headless = "4.10.0.84"
pypdf = "5.1.0"
stqdm = "0.0.5"
transformers = "4.47.1"
pymupdf = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
